--- a/style.css
+++ b/style.css
@@ -204,3 +204,11 @@ footer {
         padding: 0.4rem 0.8rem;
     }
 }
+
+.whitehatjr {
+    width: 50%;
+    height: auto
+}
+.acheivment1 {
+ text-align: center
+}
